--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,15 +35,7 @@ body {
     font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 700;
-    display: inline-block;
-    background-image: 
-        linear-gradient(
-            to right, 
-            $color-primary-light, 
-            $color-primary-dark);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+    @include gradientTextColor;
     letter-spacing: .2rem;
     transition: all .2s;
 
