--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -10,26 +10,55 @@
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-12deg);
+    $story__shape-circle: circle(50% at 50% 50%);
 
     &__shape {
         width: 15rem;
         height: 15rem;
         float: left;
 
-        $story__shape-circle: circle(50% at 50% 50%);
         -webkit-shape-outside: $story__shape-circle;
         shape-outside: $story__shape-circle;
         -webkit-clip-path: $story__shape-circle;
         clip-path: $story__shape-circle;
 
         transform: translateX(-3rem) skewX(12deg);
+        overflow: hidden;
+        position: relative;
     }
 
     &__img {
         height: 100%;
+        transform: translateX(-4r21em) scale(1.4);
+        backface-visibility: hidden;
+        transition: all .5s;
     }
 
     &__text {
         transform: skewX(12deg);
+    }
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+        transition: all .5s;
+        backface-visibility: hidden;
+    }
+
+    &:hover &__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__img {
+        transform: scale(1);
+        filter: blur(.3rem) brightness(80%);
     }
 }
