--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -24,3 +24,47 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/*
+Media Query Manager
+-----------------------
+0 - 600px: Phone
+600 - 900px: Tablet Portait
+900 - 1200px: Tablet Landscape
+1200 - 1800px: Normal Desktop
+1800 - Infinity: Large Desktop 
+
+$breakpoint choices
+-------------------
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px
+*/
+@mixin respond($breakpoint){
+    @if $breakpoint == phone {
+        @media(max-width: 37.5em) { // 600px
+            @content
+        };
+    }
+
+    @if $breakpoint == tab-port {
+        @media(max-width: 56.25em) { // 900px
+            @content
+        };
+    }
+
+    @if $breakpoint == tab-land { 
+        @media(max-width: 75em) { // 1200px
+            @content
+        };
+    }
+
+    @if $breakpoint == big-desktop {
+        @media(min-width: 112.5em) { // 1800px
+            @content
+        };
+    }
+}
