--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,7 +14,36 @@ Define global font size.
 REM changes with this value.
 */
 html {
-    font-size: 62.5%; // 10/16 = 0.625
+    /*
+    1rem = 10px
+    10px/16px = 0.625
+    */
+    font-size: 62.5%;
+
+    @include respond(tab-land) {
+        /*
+        1rem = 9px
+        9px/16px = 0.5625
+        */
+        font-size: 56.25%;
+    }
+
+    @include respond(tab-port) {
+        /*
+        1rem = 8px
+        8px/16px = 0.5
+        */
+        font-size: 50%;
+    }
+
+    @include respond(big-desktop) {
+        /*
+        1rem = 12px
+        12px/16px = 0.75
+        */
+        font-size: 75%;
+    }
+
 }
 
 /* 
