--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -20,6 +20,14 @@ html {
     */
     font-size: 62.5%;
 
+    @include respond(big-desktop) {
+        /*
+        1rem = 12px
+        12px/16px = 0.75
+        */
+        font-size: 75%;
+    }
+
     @include respond(tab-land) {
         /*
         1rem = 9px
@@ -36,14 +44,6 @@ html {
         font-size: 50%;
     }
 
-    @include respond(big-desktop) {
-        /*
-        1rem = 12px
-        12px/16px = 0.75
-        */
-        font-size: 75%;
-    }
-
 }
 
 /* 
@@ -51,4 +51,9 @@ Define font formatting in the body element
 */
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+       padding: 0;
+    }
 }
