--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,10 +7,18 @@
     box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .15);
     transition: transform .3s;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
         @include gradientTextColor;
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+        }
     }
 
     &:hover{
