Challenge - Fix Popup for Phone Size.

--- a/css/style.css
+++ b/css/style.css
@@ -635,17 +635,37 @@ body {
     opacity: 0;
     transform: transform(-50%, -50%) scale(0.25);
     transition: all .4s .2s; }
+    @media (max-width: 37.5em) {
+      .popup__content {
+        width: 100%; } }
   .popup__left {
     width: 33.33333%;
     display: table-cell; }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        padding-top: 5rem;
+        width: 100%;
+        display: inline-block; } }
   .popup__right {
     width: 66.66667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 37.5em) {
+      .popup__right {
+        width: 100%;
+        display: inline-block;
+        padding: 2rem 4rem; } }
   .popup__img {
     display: block;
     width: 100%; }
+    @media (max-width: 37.5em) {
+      .popup__img {
+        display: inline-block;
+        width: 50%;
+        height: 15rem;
+        float: left;
+        object-fit: cover; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -659,6 +679,9 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        margin-bottom: 2rem; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -675,6 +698,11 @@ body {
     display: inline-block;
     transition: all .2s;
     line-height: 1; }
+    @media (max-width: 37.5em) {
+      .popup__close:link, .popup__close:visited {
+        top: .5rem;
+        right: .5rem;
+        font-size: 5rem; } }
   .popup__close:hover {
     color: #55c57a; }
 
