--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -23,11 +23,21 @@
         opacity: 0;
         transform: transform(-50%, -50%) scale(.25);
         transition: all .4s .2s;
+
+        @include respond(phone) {
+            width: 100%;
+        }
     }
 
     &__left {
         width: 33.33333%;
         display: table-cell;
+
+        @include respond(phone) {
+            padding-top: 5rem;
+            width: 100%;
+            display: inline-block;
+        }
     }
 
     &__right {
@@ -35,17 +45,30 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(phone) {
+            width: 100%;
+            display: inline-block;
+            padding: 2rem 4rem;
+        }
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(phone) {
+            display: inline-block;
+            width: 50%;
+            height: 15rem;
+            float: left;
+            object-fit: cover;
+        }
     }
 
     &__text {
         font-size: 1.4rem;
         margin-bottom: 4rem;
-
 
         -moz-column-count: 2;
         -moz-column-gap: 4rem;
@@ -58,6 +81,10 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+        @include respond(phone) {
+            margin-bottom: 2rem;
+        }
     }
 
     // Open States
@@ -84,6 +111,12 @@
             display: inline-block;
             transition: all .2s;
             line-height: 1;
+
+            @include respond(phone) {
+                top: .5rem;
+                right: .5rem;
+                font-size: 5rem;
+            }
         }
 
         &:hover {
