--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,8 @@ body {
     hyphens: auto; }
     @media (max-width: 37.5em) {
       .popup__text {
-        margin-bottom: 2rem; } }
+        margin-bottom: 2rem;
+        font-size: 1.2rem; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
