--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -14,6 +14,8 @@
         top: 0;
         left: 0;
         width: 100%;
+        -moz-backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         border-radius: .3rem;
         overflow: hidden;
